# triangle-abstract-machine

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/: pull_request_template.md
.github/workflows/: cmake-multi-platform.yml  nightly-release.yml
app/: CMakeLists.txt  cli.cc  main.cc
docs/: CMakeLists.txt
include/tam/: cli.h  error.h  tam.h
include/tam/test/: integration_test.h
src/: CMakeLists.txt  cli.cc  error.cc  errors.rs  heap.cc  instructions.rs  lib.rs  main.cc  main.rs  primitives.cc  tam.cc
src/emulator/: execute.rs  mod.rs
test/: CMakeLists.txt  cli_tests.cc  execute_tests.cc  heap_tests.cc  integration_test.h  integration_tests.cc  mnemonic_test.cc  primitive_arithmetic_tests.cc  primitive_compare_tests.cc  primitive_heap_tests.cc  primitive_io_tests.cc  primitive_logic_tests.cc  snapshot_test.cc
tests/: run_complex_program.rs  run_simple_program.rs
