find_package(Doxygen)
if(Doxygen_FOUND)
  set(DOXYGEN_USE_MDFILE_AS_MAINPAGE ${PROJECT_SOURCE_DIR}/README.md)
  set(DOXYGEN_JAVADOC_AUTOBRIEF Yes)
  set(DOXYGEN_HTML_EXTRA_STYLESHEET doxygen-awesome.css)
  set(DOXYGEN_HTML_COLORSTYLE "LIGHT")
  set(DOXYGEN_GENERATE_TREEVIEW Yes)
  set(DOXYGEN_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/docs)

  doxygen_add_docs(docs 
    ${PROJECT_SOURCE_DIR}/app 
    ${PROJECT_SOURCE_DIR}/src 
    ${PROJECT_SOURCE_DIR}/include)
endif()

